# scara_robot

./: README.md
cad/: manipulator.SLDASM
cad/fabrication/: belt_coupler.STL  link_0_bottom.DXF  link_0_top.DXF  link_1_bottom.DXF  link_1_top.DXF  magnet_tool.STL  manipulator - link_0-1 link_0-2-1.STL  manipulator - link_0-1 link_0-2.STL  manipulator - link_0-1 stepper_motor-1-1.STL  manipulator - link_0-1 stepper_motor-1.STL  manipulator - link_1-1 bearing-1-1.STL  manipulator - link_1-1 bearing-1.STL  manipulator - link_1-1 link_1-1-1.STL  manipulator - link_1-1 link_1-1.STL  manipulator - link_1-1 stepper_motor-1-1.STL  manipulator - link_1-1 stepper_motor-1.STL  manipulator - link_2-2 bearing-1-1.STL  manipulator - link_2-2 bearing-1.STL  manipulator - link_2-2 link_2-1-1.STL  manipulator - link_2-2 link_2-1.STL
cad/parts/: bearing.SLDPRT  belt_coupler.SLDPRT  encoder_holder.SLDPRT  link_0.SLDPRT  link_1.SLDPRT  link_2.SLDPRT  magnet_tool.SLDPRT  stepper_motor.SLDPRT
cad/sub_assemblies/: link_0.SLDASM  link_1.SLDASM  link_2.SLDASM  pneumatic_cylinder.SLDASM
doc/: parts_list.xlsx
eda/manipulator_PCB/: fp-info-cache  fp-lib-table  manipulator_PCB.kicad_pcb  manipulator_PCB.kicad_prl  manipulator_PCB.kicad_pro  manipulator_PCB.kicad_sch  stepper_connector.kicad_sch  sym-lib-table
src/esp32_program/: main.cpp
src/manipulator/: CMakeLists.txt  package.xml
src/manipulator/meshes/: base_link.STL  link_2.STL
src/manipulator/urdf/: manipulator.urdf
src/manipulator_config/: .setup_assistant  CMakeLists.txt  package.xml
src/manipulator_control/: package.xml  (+1 more)
(+68 files in other folders)
